--- a/data/slide2.css
+++ b/data/slide2.css
@@ -1,1 +1,1 @@
-#spr1_3f231,#spr2_3f231 {clip:rect(0px,960px,540px,0px);}#spr3_3f231 {width:960px; height:540px; overflow:hidden;}#txt0_3f231 {font-family:fnt4; font-size:44px; line-height:51px; font-weight:bold; color:#ffffff;}
+#spr1_16107,#spr2_16107 {clip:rect(0px,960px,540px,0px);}#spr3_16107 {width:960px; height:540px; overflow:hidden;}#txt0_16107 {font-family:fnt4; font-size:44px; line-height:51px; font-weight:bold; color:#ffffff;}
