--- a/data/slide23.css
+++ b/data/slide23.css
@@ -1,1 +1,1 @@
-#spr1_465da,#spr2_465da {clip:rect(0px,960px,540px,0px);}#spr3_465da {width:960px; height:540px; overflow:hidden;}
+#spr1_1e097,#spr2_1e097 {clip:rect(0px,960px,540px,0px);}#spr3_1e097 {width:960px; height:540px; overflow:hidden;}
