--- a/data/slide6.css
+++ b/data/slide6.css
@@ -1,1 +1,1 @@
-#spr1_3f771,#spr2_3f771 {clip:rect(0px,960px,540px,0px);}#spr3_3f771 {width:960px; height:540px; overflow:hidden;}#txt0_3f771 {font-family:fnt4; font-size:66px; line-height:76px; font-weight:bold; color:#000000;}
+#spr1_16760,#spr2_16760 {clip:rect(0px,960px,540px,0px);}#spr3_16760 {width:960px; height:540px; overflow:hidden;}#txt0_16760 {font-family:fnt4; font-size:66px; line-height:76px; font-weight:bold; color:#000000;}
