--- a/data/slide5.css
+++ b/data/slide5.css
@@ -1,1 +1,1 @@
-#spr1_3f648,#spr2_3f648 {clip:rect(0px,960px,540px,0px);}#spr3_3f648 {width:960px; height:540px; overflow:hidden;}#txt0_3f648 {font-family:fnt4; font-size:80px; line-height:92px; font-weight:bold; color:#ff0000;}
+#spr1_165e9,#spr2_165e9 {clip:rect(0px,960px,540px,0px);}#spr3_165e9 {width:960px; height:540px; overflow:hidden;}#txt0_165e9 {font-family:fnt4; font-size:80px; line-height:92px; font-weight:bold; color:#ff0000;}
